grammaire
Operation = Term { AddOp Term }
AddOp = «+» | «-»
Term = Factor { MulOp Factor }
MulOp = «*» | «/» | «%» | «^»
Factor = [ "-" ] Primary
Primary = Identifier | Scal | "(" Operation ")"

Instruction = Declaration | Affectation «!»
Declaration = Type Identifier [ «:» ObjPnt | ObjVect | ObjLine | ObjSeg | ObjAng | ObjScal | ObjString ]
Affectation = Identifier «:» ObjPnt | ObjVect | ObjLine | ObjSeg | ObjAng | ObjScal | ObjString

Type = "Pnt" | "Vect" | "Line" | "Seg" | "Ang" | "Scal" | "String"

ObjScal = Identifier | Operation
ObjPnt = Identifier | InstPnt
ObjVect = Identifier | InstVect
ObjLine = Identifier | InstLine
ObjSeg = Identifier | InstSeg
ObjAng = Identifier | InstAng
ObjString = Identifier | String | "|" ObjScal "|" | ObjString "+" ObjString

InstPnt = «Pnt» «(» ObjScal «,» ObjScal «)»
InstVect = «Vect» «(» ObjScal «,» ObjScal «)»
InstLine = «Line» «(» ObjPnt «,» ObjPnt «)»
InstSeg = «Seg» «(» ObjPnt «,» ObjPnt «)»
InstAng = «Ang» «(» ObjVect «,» ObjVect «)»

Print = "print" ObjString

Scal = [ «-» ] { digit } [ «.» digit { digit } ]
String = «"» { char } «"»
